# TubePocket

./: .gitignore  AGENTS.md  README.md  README.zh-TW.md  pyproject.toml  tubepocket.spec
scripts/: tubepocket.user.js
src/tubepocket/: __init__.py  __main__.py  app.py  config.py  formats.py  models.py  registry.py  scheme_ipc.py  url_scheme.py  ytdlp.py
tests/: test_formats.py  test_registry.py  test_scheme_ipc.py  test_url_scheme.py  test_ytdlp.py
